@@ -1,3 +1,4 @@
+- add append feature to {capture} (jablko, monte)
 - fix when (un)registering filters with the same method name but different class
   name (danilo)
 - fix calling registered objects' methods with an empty argument list
